--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="enter_rest_id_message">Enter Restaurant ID</string>
     <string name="button_submit">Submit</string>
     <string name="open_helper_classname">com.resto.database.DatabaseHelper</string>
+    <string name="enter_table_id_message">Enter Table ID</string>
 </resources>
