--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="app_name">resto</string>
     <string name="restaurant_name">Legends of Rock</string>
     <string name="restaurant_desc">Description</string>
-    <string name="menu">Menu</string>
+    <string name="menuItem">Menu</string>
     <string name="enter_rest_id_message">Enter Restaurant ID</string>
     <string name="button_submit">Submit</string>
-    <string name="open_helper_classname">com.resto.database.DatabaseHelper</string>
+    <string name="open_helper_classname">com.resto.models.DatabaseHelper</string>
     <string name="enter_table_id_message">Enter Table ID</string>
 </resources>
